[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/Scenes/Views/ImageView.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/Icons/White/Audio/MusicNotes/icons8-musik-1000.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.156863, 0.156863, 0.156863, 0 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.133333, 0.133333, 0.133333, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="Theme" id=9]
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 6 )
Button/styles/normal = SubResource( 7 )
Button/styles/pressed = SubResource( 8 )

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/Cover:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DynamicBackground:material:shader_param/strength")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DynamicBackground:material:shader_param/transparency")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBackground:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("DynamicBackground:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/HBoxContainer/Cover:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DynamicBackground:material:shader_param/strength")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 3.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DynamicBackground:material:shader_param/transparency")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("StaticBackground:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/Option/Options:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DynamicBackground:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ImageView" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="StaticBackground" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1120.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 4 )

[node name="DynamicBackground" type="PanelContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1120.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1120.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1120.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="LeftEmpty" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 20.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2
size_flags_vertical = 3

[node name="Buffer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 20.0
margin_right = 20.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_vertical = 3

[node name="Cover" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 20.0
margin_right = 380.0
margin_bottom = 600.0
rect_min_size = Vector2( 360, 360 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="MiddleBuffer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 380.0
margin_right = 390.0
margin_bottom = 600.0
rect_min_size = Vector2( 10, 0 )
mouse_filter = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 390.0
margin_right = 1100.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopEmpty" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 710.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="Option" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 710.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="Options" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/Option"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 710.0
margin_bottom = 544.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TopEmpty" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer/Option/Options"]
margin_right = 710.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/Option/Options"]
margin_top = 28.0
margin_right = 710.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
alignment = 1

[node name="Cover" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Option/Options/HBoxContainer"]
margin_left = 197.0
margin_top = 3.0
margin_right = 297.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 30 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
theme = SubResource( 9 )
text = "Cover"

[node name="Lyrics" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Option/Options/HBoxContainer"]
margin_left = 305.0
margin_top = 3.0
margin_right = 405.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 30 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
theme = SubResource( 9 )
text = "Lyrics"

[node name="Infos" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Option/Options/HBoxContainer"]
margin_left = 413.0
margin_top = 3.0
margin_right = 513.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 30 )
mouse_default_cursor_shape = 2
size_flags_vertical = 4
theme = SubResource( 9 )
text = "Infos"

[node name="OptionPlace" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/Option/Options"]
margin_top = 72.0
margin_right = 710.0
margin_bottom = 516.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BottomEmpty" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer/Option/Options"]
margin_top = 524.0
margin_right = 710.0
margin_bottom = 544.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="BottomEmpty" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 580.0
margin_right = 710.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3

[node name="Rightempty" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 1100.0
margin_right = 1120.0
margin_bottom = 600.0
rect_min_size = Vector2( 20, 0 )
mouse_filter = 2
size_flags_vertical = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/start = SubResource( 11 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cover" to="." method="OnImageViewCoverPressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Option/Options/HBoxContainer/Cover" to="." method="OnImageViewCoverPressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Option/Options/HBoxContainer/Lyrics" to="." method="OnLyricsPressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Option/Options/HBoxContainer/Infos" to="." method="OnInfosPressed"]
